--- a/blog.html
+++ b/blog.html
@@ -2,197 +2,160 @@
 <html lang="en">
 
 <head>
-    <!-- Basic Meta -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- SEO Essentials -->
-    <title>Blog | ThirdEye Digital Hub</title>
-    <meta name="description" content="Explore expert articles on web development, mobile apps, SEO, and more." />
-    <meta name="keywords" content="Web Development, Mobile Apps, SEO, Blog, Technology, Marketing" />
+  <title>Blog | ThirdEye Digital Hub</title>
+  <meta name="description" content="Explore expert articles on web development, mobile apps, SEO, and more.">
+  <meta name="keywords" content="Web Development, Mobile Apps, SEO, Blog, Technology, Marketing">
 
-    <!-- Open Graph Meta Tags for better social media sharing -->
-    <meta property="og:title" content="Blog | ThirdEye Digital Hub" />
-    <meta property="og:description" content="Explore expert articles on web development, mobile apps, SEO, and more." />
-    <meta property="og:image" content="img/Blog/og-image.jpg" />
-    <meta property="og:url" content="https://ThirdEye Digital Hub.com/blog.html" />
-    <meta property="og:type" content="website" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Blog | ThirdEye Digital Hub" />
+  <meta property="og:description" content="Explore expert articles on web development, mobile apps, SEO, and more." />
+  <meta property="og:image" content="img/Blog/og-image.jpg" />
+  <meta property="og:url" content="https://thirdeyedigitalhub.com/blog.html" />
+  <meta property="og:type" content="website" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="CSS/Comman_Style.css">
-    <link rel="stylesheet" href="CSS/Blog_Style.css">
+  <!-- CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="CSS/Comman_Style.css">
+  <link rel="stylesheet" href="CSS/Blog_Style.css">
 </head>
 
 <body>
-    <!-- Navbar -->
-    <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
-        style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
-        <li class="nav-item" role="presentation">
-            <a href="index.html" class="nav-link rounded-5 btn">Home</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a href="about.html" class="nav-link rounded-5 btn">About</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a href="contact.html" class="nav-link rounded-5 btn">Contact</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a href="blog.html" class="nav-link rounded-5 active" aria-current="page">Blogs</a>
-        </li>
-    </ul>
 
-    <!-- Blog Header -->
-    <section class="blog-header">
-        <div class="container">
-            <h1>Our Blog</h1>
-            <p class="lead">Insights & Updates on Technology, Development, and Marketing</p>
+  <!-- Navbar -->
+  <nav class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" role="navigation"
+    style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
+    <a href="index.html" class="nav-link rounded-5 btn">Home</a>
+    <a href="about.html" class="nav-link rounded-5 btn">About</a>
+    <a href="contact.html" class="nav-link rounded-5 btn">Contact</a>
+    <a href="blog.html" class="nav-link rounded-5 btn active" aria-current="page">Blogs</a>
+  </nav>
+
+  <!-- Blog Header -->
+  <header class="blog-header py-5 bg-light text-center">
+    <div class="container">
+      <h1 class="display-4">Our Blog</h1>
+      <p class="lead text-muted">Insights & updates on technology, development, and marketing</p>
+    </div>
+  </header>
+
+  <!-- Blog Posts -->
+  <main class="container py-5">
+    <div class="row g-4">
+
+      <!-- Blog Post Card -->
+      <!-- Repeatable block -->
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <img src="img/Blog/Web-Development.jpg" class="card-img-top" alt="Why Your Business Needs a Website" loading="lazy">
+          <div class="card-body">
+            <h5 class="card-title">Why Your Business Needs a Website in 2025</h5>
+            <p class="card-text">Discover why a professional website is critical for credibility, SEO, and growth in today’s digital economy.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+          </div>
         </div>
-    </section>
+      </div>
 
-    <!-- Blog Posts -->
-    <section class="container py-5">
-        <div class="row g-4">
-            <!-- Blog Post 1 -->
-            <div class="col-md-4">
-                <div class="card h-100 shadow-sm">
-                    <img src="img/Blog/Web-Development.jpg" class="card-img-top" alt="Why Your Business Needs a Website"
-                        loading="lazy">
-                    <div class="card-body">
-                        <h5 class="card-title">Why Your Business Needs a Website in 2025</h5>
-                        <p class="card-text">Discover why a professional website is critical for credibility, SEO, and
-                            growth in today’s digital economy.</p>
-                        <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Blog Post 2 -->
-            <div class="col-md-4">
-                <div class="card h-100 shadow-sm">
-                    <img src="img/Blog/mobile_app_development.png" class="card-img-top" alt="Mobile App Trends"
-                        loading="lazy">
-                    <div class="card-body">
-                        <h5 class="card-title">Top Mobile App Trends to Watch This Year</h5>
-                        <p class="card-text">From AI integration to PWAs, see what mobile development trends are shaping
-                            the future of digital experiences.</p>
-                        <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Blog Post 3 -->
-            <div class="col-md-4">
-                <div class="card h-100 shadow-sm">
-                    <img src="img/Blog/Business-Technology.jpeg" class="card-img-top" alt="Landing Page Tips"
-                        loading="lazy">
-                    <div class="card-body">
-                        <h5 class="card-title">What Makes a Great Landing Page?</h5>
-                        <p class="card-text">Explore the key ingredients of a landing page that converts — layout, CTA,
-                            trust signals, and more.</p>
-                        <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Blog Post 4 -->
-            <div class="col-md-4">
-                <div class="card h-100 shadow-sm">
-                    <img src="img/Blog/marketing_digital.jpg" class="card-img-top" alt="SEO Basics" loading="lazy">
-                    <div class="card-body">
-                        <h5 class="card-title">SEO Basics for Small Businesses</h5>
-                        <p class="card-text">Learn what SEO is, how it works, and simple ways to optimize your site to
-                            rank higher on Google.</p>
-                        <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Blog Post 5 -->
-            <div class="col-md-4">
-                <div class="card h-100 shadow-sm">
-                    <img src="img/Blog/startup-team.webp" class="card-img-top" alt="Choosing a Tech Stack"
-                        loading="lazy">
-                    <div class="card-body">
-                        <h5 class="card-title">How to Choose the Right Tech Stack</h5>
-                        <p class="card-text">Backend, frontend, databases—here’s how we help clients choose the best
-                            tools for their project goals.</p>
-                        <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
-                    </div>
-                </div>
-            </div>
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <img src="img/Blog/mobile_app_development.png" class="card-img-top" alt="Mobile App Trends" loading="lazy">
+          <div class="card-body">
+            <h5 class="card-title">Top Mobile App Trends to Watch This Year</h5>
+            <p class="card-text">From AI integration to PWAs, see what mobile development trends are shaping the future.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+          </div>
         </div>
-    </section>
+      </div>
 
-    <!-- Footer Section -->
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <!-- Contact Info -->
-                <div class="col-md-3">
-                    <h5>Contact Us</h5>
-                    <div class="contact-info">
-                        <p><strong>Email:</strong> info@ThirdEye Digital Hub.com</p>
-                        <p><strong>Phone:</strong> +1 234 567 890</p>
-                        <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
-                    </div>
-                </div>
-
-                <!-- Quick Links -->
-                <div class="col-md-3">
-                    <h5>Quick Links</h5>
-                    <div class="footer-links">
-                        <a href="index.html">Home</a>
-                        <a href="about.html">About</a>
-                        <a href="blog.html">Blog</a>
-                        <a href="contact.html">Contact</a>
-                    </div>
-                </div>
-
-                <!-- Social Media -->
-                <div class="col-md-3">
-                    <h5>Follow Us</h5>
-                    <div class="social-icons">
-                        <a href="#" target="_blank" class="facebook" aria-label="Facebook"><i
-                                class="fab fa-facebook"></i></a>
-                        <a href="#" target="_blank" class="twitter" aria-label="Twitter"><i
-                                class="fab fa-twitter"></i></a>
-                        <a href="#" target="_blank" class="instagram" aria-label="Instagram"><i
-                                class="fab fa-instagram"></i></a>
-                        <a href="#" target="_blank" class="linkedin" aria-label="LinkedIn"><i
-                                class="fab fa-linkedin"></i></a>
-                    </div>
-                </div>
-
-                <!-- Newsletter Signup -->
-                <div class="col-md-3">
-                    <h5>Newsletter</h5>
-                    <p>Sign up for our newsletter to get the latest updates.</p>
-                    <form action="#" method="post">
-                        <input type="email" class="form-control mb-2" placeholder="Enter your email" required
-                            aria-label="Email address for newsletter">
-                        <button type="submit" class="btn btn-light btn-block"
-                            aria-label="Subscribe to newsletter">Subscribe</button>
-                    </form>
-                </div>
-            </div>
-
-            <!-- Copyright -->
-            <div class="text-center mt-4">
-                <p>&copy; 2025 ThirdEye Digital Hub. All Rights Reserved.</p>
-            </div>
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <img src="img/Blog/Business-Technology.jpeg" class="card-img-top" alt="Landing Page Tips" loading="lazy">
+          <div class="card-body">
+            <h5 class="card-title">What Makes a Great Landing Page?</h5>
+            <p class="card-text">Explore layout, CTA, trust signals, and key elements that boost conversion.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+          </div>
         </div>
-    </footer>
+      </div>
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-        crossorigin="anonymous"></script>
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <img src="img/Blog/marketing_digital.jpg" class="card-img-top" alt="SEO Basics" loading="lazy">
+          <div class="card-body">
+            <h5 class="card-title">SEO Basics for Small Businesses</h5>
+            <p class="card-text">Simple ways to improve visibility and rank higher on Google.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <img src="img/Blog/startup-team.webp" class="card-img-top" alt="Choosing a Tech Stack" loading="lazy">
+          <div class="card-body">
+            <h5 class="card-title">How to Choose the Right Tech Stack</h5>
+            <p class="card-text">A developer’s guide to picking the right tools for your project goals.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer bg-light mt-5 pt-5 pb-3">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-md-3 mb-4">
+          <h5>Contact Us</h5>
+          <p>Email: <a href="mailto:info@thirdeyedigitalhub.com">info@thirdeyedigitalhub.com</a></p>
+          <p>Phone: +1 234 567 890</p>
+          <p>Address: 1234 Street Name, City, Country</p>
+        </div>
+
+        <div class="col-md-3 mb-4">
+          <h5>Quick Links</h5>
+          <ul class="list-unstyled">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+
+        <div class="col-md-3 mb-4">
+          <h5>Follow Us</h5>
+          <div class="d-flex gap-3">
+            <a href="#" aria-label="Facebook"><i class="fab fa-facebook fa-lg"></i></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter fa-lg"></i></a>
+            <a href="#" aria-label="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
+            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+          </div>
+        </div>
+
+        <div class="col-md-3 mb-4">
+          <h5>Newsletter</h5>
+          <p>Sign up to get our latest tech insights and news.</p>
+          <form>
+            <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
+            <button type="submit" class="btn btn-primary w-100">Subscribe</button>
+          </form>
+        </div>
+
+      </div>
+      <div class="text-center mt-3">
+        <p>&copy; 2025 ThirdEye Digital Hub. All Rights Reserved.</p>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
