--- a/about.html
+++ b/about.html
@@ -4,14 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="Learn more about ThirdEye Digital Hub, our team, values, mission, and how we deliver high-quality services to our clients.">
+  <meta name="description" content="Learn more about ThirdEye Digital Hub, our team, values, mission, and how we deliver high-quality services to our clients.">
   <meta name="keywords" content="About Us, ThirdEye Digital Hub, company, team, services, quality, mission, values">
 
   <title>About Us - ThirdEye Digital Hub | Learn More About Our Team and Mission</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="CSS/Comman_Style.css">
   <link rel="stylesheet" href="CSS/About_Style.css">
@@ -20,96 +18,86 @@
 <body>
 
   <!-- Navbar -->
-  <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
-    style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
-    <li class="nav-item" role="presentation">
-      <a href="index.html" class="nav-link rounded-5 btn">Home</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a href="about.html" class="nav-link rounded-5 btn active" aria-current="page">About</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a href="contact.html" class="nav-link rounded-5 btn">Contact</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a href="blog.html" class="nav-link rounded-5 btn">Blogs</a>
-    </li>
-  </ul>
+  <nav class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm"
+       role="navigation"
+       style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
+    <a href="index.html" class="nav-link rounded-5 btn">Home</a>
+    <a href="about.html" class="nav-link rounded-5 btn active" aria-current="page">About</a>
+    <a href="contact.html" class="nav-link rounded-5 btn">Contact</a>
+    <a href="blog.html" class="nav-link rounded-5 btn">Blogs</a>
+  </nav>
 
-  <!-- About Section -->
-  <section class="about-header">
+  <!-- About Header -->
+  <header class="about-header py-5 bg-light text-center">
     <div class="container">
-      <h1>About Us</h1>
+      <h1 class="display-4">About Us</h1>
+      <p class="lead text-muted">Discover our journey, our team, and our mission to drive digital success.</p>
     </div>
-  </section>
+  </header>
 
-  <section class="about-section">
+  <!-- About Content -->
+  <main class="about-section py-5">
     <div class="container">
-      <h2>Our Story</h2>
-      <p>
-        Welcome to ThirdEye Digital Hub! We are a company dedicated to providing high-quality services to our clients.
-        Our
-        mission is to deliver exceptional results and build long-term relationships based on trust and integrity.
-      </p>
-      <p>
-        Our team consists of skilled professionals who are passionate about their work. We believe in innovation,
-        collaboration, and continuous learning to stay ahead in the ever-changing digital world.
-      </p>
+      <h2 class="mb-4">Our Story</h2>
+      <p>Welcome to <strong>ThirdEye Digital Hub</strong>! We’re passionate about crafting high-quality digital experiences. Our mission is to deliver exceptional results and build long-term partnerships with our clients, grounded in trust and integrity.</p>
+      <p>We’re a team of creative technologists, developers, and strategists committed to innovation and continuous learning. Together, we empower businesses to thrive in the digital age through expert web development, mobile apps, and digital marketing solutions.</p>
     </div>
-  </section>
+  </main>
 
   <!-- Footer -->
-  <footer class="footer">
+  <footer class="footer bg-light pt-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
+
+        <!-- Contact Info -->
+        <div class="col-md-3 mb-4">
           <h5>Contact Us</h5>
-          <div class="contact-info">
-            <p><strong>Email:</strong> info@ThirdEye Digital Hub.com</p>
-            <p><strong>Phone:</strong> +1 234 567 890</p>
-            <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
-          </div>
+          <p>Email: <a href="mailto:info@thirdeyedigitalhub.com">info@thirdeyedigitalhub.com</a></p>
+          <p>Phone: +1 234 567 890</p>
+          <p>Address: 1234 Street Name, City, Country</p>
         </div>
 
-        <div class="col-md-3">
+        <!-- Quick Links -->
+        <div class="col-md-3 mb-4">
           <h5>Quick Links</h5>
-          <div class="footer-links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="blog.html">Blogs</a>
-            <a href="contact.html">Contact</a>
-          </div>
+          <ul class="list-unstyled">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="blog.html">Blogs</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
         </div>
 
-        <div class="col-md-3">
+        <!-- Social Media -->
+        <div class="col-md-3 mb-4">
           <h5>Follow Us</h5>
-          <div class="social-icons">
-            <a href="#" target="_blank" class="facebook" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank" class="twitter" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank" class="instagram" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank" class="linkedin" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+          <div class="d-flex gap-3">
+            <a href="#" aria-label="Facebook"><i class="fab fa-facebook fa-lg"></i></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter fa-lg"></i></a>
+            <a href="#" aria-label="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
+            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
           </div>
         </div>
 
-        <div class="col-md-3">
+        <!-- Newsletter Signup -->
+        <div class="col-md-3 mb-4">
           <h5>Newsletter</h5>
-          <p>Sign up for our newsletter to get the latest updates.</p>
-          <form action="#" method="post">
+          <p>Stay updated with our latest news and insights.</p>
+          <form>
             <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
-            <button type="submit" class="btn btn-light btn-block">Subscribe</button>
+            <button type="submit" class="btn btn-primary w-100">Subscribe</button>
           </form>
         </div>
-      </div>
 
+      </div>
       <div class="text-center mt-4">
-        <p>&copy; 2025 ThirdEye Digital Hub. All Rights Reserved.</p>
+        <p class="mb-0">&copy; 2025 ThirdEye Digital Hub. All Rights Reserved.</p>
       </div>
     </div>
   </footer>
 
-  <!-- Bootstrap JS and dependencies -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
 </body>
 
