--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </section>
 
   <!-- Footer Section -->
-  <footer class="footer bg-light py-5">
+  <footer class="footer py-5">
     <div class="container">
       <div class="row">
         <!-- Contact Info -->
