--- a/about.html
+++ b/about.html
@@ -18,13 +18,12 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm"
-       role="navigation"
-       style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
-    <a href="index.html" class="nav-link rounded-5 btn">Home</a>
-    <a href="about.html" class="nav-link rounded-5 btn active" aria-current="page">About</a>
-    <a href="contact.html" class="nav-link rounded-5 btn">Contact</a>
-    <a href="blog.html" class="nav-link rounded-5 btn">Blogs</a>
+  <!-- Navigation -->
+  <nav class="nav nav-pills nav-fill nav-custom" role="navigation">
+    <a href="index.html" class="nav-link ">Home</a>
+    <a href="about.html" class="nav-link active">About</a>
+    <a href="contact.html" class="nav-link">Contact</a>
+    <a href="blog.html" class="nav-link">Blogs</a>
   </nav>
 
   <!-- About Header -->
