--- a/contact.html
+++ b/contact.html
@@ -24,14 +24,13 @@
 </head>
 
 <body>
-  <!-- Navigation -->
-  <nav class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm"
-    style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
-    <a href="index.html" class="nav-link rounded-5 btn">Home</a>
-    <a href="about.html" class="nav-link rounded-5 btn">About</a>
-    <a href="contact.html" class="nav-link rounded-5 btn active" aria-current="page">Contact</a>
-    <a href="blog.html" class="nav-link rounded-5 btn">Blogs</a>
-  </nav>
+ <!-- Navigation -->
+ <nav class="nav nav-pills nav-fill nav-custom" role="navigation">
+  <a href="index.html" class="nav-link ">Home</a>
+  <a href="about.html" class="nav-link">About</a>
+  <a href="contact.html" class="nav-link active">Contact</a>
+  <a href="blog.html" class="nav-link">Blogs</a>
+</nav>
 
   <!-- Contact Form -->
   <section class="py-5">
